--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script>src="practice.js"</script>
 </head>
 <body>
-    <p>test</p>
+    <p>just me practicing some javascript</p>
 </body>
 </html>
